# budgetmanager

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  chatgpt_guidelines.txt  index.md  project_structure.txt  reports.md  template_python.py  usage.md
examples/: advanced_usage.py  quickstart.ipynb
src/budgetmanager/: config.py  ledger.py  transaction.py
src/budgetmanager/cli/: cli.py
src/budgetmanager/core/: budget.py  chart.py  ledger.py  report.py  transaction.py
src/budgetmanager/file/: file_handler.py  json_handler.py  sqlite_handler.py
src/budgetmanager/gui/: base.py  tkinter_app.py
src/budgetmanager/gui/controllers/: transaction_controller.py
src/budgetmanager/gui/views/: main_window.py  transaction_view.py
src/budgetmanager/utils/: timestamp.py
tests/: conftest.py
tests/integration/: test_cli_flow_integration.py  test_file_json_integration.py  test_ledger_report_integration.py  test_transaction_ledger_integration.py
tests/unit/: test_chart.py  test_file_handler.py  test_json_handler.py  test_ledger.py  test_report.py  test_sqlite_handler.py  test_timestamp.py  test_transaction.py
