# ─────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
# ─────────────────────────────────────────────────────────────────────────────

[project]
name = "budgetmanager"
version = "0.1.0"
description = "A simple budget managing CLI application."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Yanis", email = "yanis.mohr@gmail.com" }
]
dependencies = []

classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RealNamison/budgetmanager"
"Repository" = "https://github.com/RealNamison/budgetmanager.git"
"Issue Tracker" = "https://github.com/RealNamison/budgetmanager/issues"


[project.scripts]
budgetmgr = "budgetmanager.cli.cli:main"
# ─────────────────────────────────────────────────────────────────────────────

[project.optional-dependencies]
tests = [
  "pytest>=7.0",
  "pytest-cov",
]
# ─────────────────────────────────────────────────────────────────────────────

[tool.setuptools]
# lege fest, dass dein Paket im src-Ordner liegt
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
# für Tests: src ins PYTHONPATH nehmen
pythonpath = ["src"]
# ─────────────────────────────────────────────────────────────────────────────
