# ─────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
# ─────────────────────────────────────────────────────────────────────────────

[project]
name = "budgetmanager"
version = "0.1.1"
description = "A simple budget managing CLI application using SQLite."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Yanis", email = "yanis.mohr@gmail.com" }
]
dependencies = [
  "matplotlib>=3.5,<4.0"
]

classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RealNamison/budgetmanager"
"Repository" = "https://github.com/RealNamison/budgetmanager.git"
"Issue Tracker" = "https://github.com/RealNamison/budgetmanager/issues"


[project.scripts]
budgetmgr = "budgetmanager.cli.cli:main"
# ─────────────────────────────────────────────────────────────────────────────

[project.optional-dependencies]
tests = [
    "pytest>=8.3.5",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
]
# ─────────────────────────────────────────────────────────────────────────────

[tool.setuptools]
# lege fest, dass dein Paket im src-Ordner liegt
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
# für Tests: src ins PYTHONPATH nehmen
pythonpath = ["src"]
# ─────────────────────────────────────────────────────────────────────────────

[tool.black]
line-length = 79
target-version = ['py310']
# ─────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "argcomplete"
ignore_missing_imports = true
# ─────────────────────────────────────────────────────────────────────────────
